--- a/nextflow.config
+++ b/nextflow.config
@@ -1,17 +1,17 @@
 params {
   
   outdir = "result_test"
-  mode = "genetic"
+  mode = "rescue"
   generate_anndata = "True"
   generate_mudata = "False"
-  multi_input = "None" // "Users/xichenwu/theislab/hadge/params_input.csv"
+  multi_input = "None"  // run only one sample
 
   // hashing-based deconvolution
   // key input for hashing-based deconvolution
-  hto_matrix_raw = "/Volumes/wxicu/gx12/hto/raw_feature_bc_matrix"
-  hto_matrix_filtered = "/Volumes/wxicu/gx12/hto/filtered_feature_bc_matrix"
-  rna_matrix_raw = "/Volumes/wxicu/gx12/rna/raw_feature_bc_matrix"
-  rna_matrix_filtered = "/Volumes/wxicu/gx12/rna/filtered_feature_bc_matrix"
+  hto_matrix_raw = "$projectDir/test_data/hto"
+  hto_matrix_filtered = "$projectDir/test_data/hto"
+  rna_matrix_raw = "$projectDir/test_data/rna"
+  rna_matrix_filtered = "$projectDir/test_data/rna"
 
   // preprocessing
   // TRUE or FALSE uppercase
@@ -69,21 +69,6 @@ params {
   verbose_multiseq = "TRUE" // uppercase
   objectOutMulti = "multiseq"
   assignmentOutMulti = "multiseq"
-  
-  // solo
-  solo = "False"
-  rna_matrix_solo = "raw"
-  max_epochs = 400
-  lr = 0.001
-  train_size = 0.9
-  validation_size = 0.1
-  batch_size = 128
-  early_stopping = "True"
-  early_stopping_patience = 30
-  early_stopping_min_delta = 0.0
-  soft = "False"
-  include_simulated_doublets = "False"
-  assignmentOutSolo = "solo_predict"
   
   // hashsolo
   hashsolo = "False"
@@ -151,13 +136,13 @@ params {
   common_variants_scSplit = "$projectDir/test_data/common_snvs_hg38.tar.gz"
   common_variants_souporcell =  "$projectDir/test_data/common_variants_grch38.vcf"
   common_variants_freemuxlet = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
-  common_variants_cellsnp  = "$projectDir/test_data/common_variants_grch38.vcf"
+  common_variants_cellsnp  = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
   vcf_mixed = "None"
   vcf_donor = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
   celldata = "None"
 
   // demuxlet and freemuxlet
-  demuxlet = "False"
+  demuxlet = "True"
   demuxlet_preprocess = "False"
   tag_group = 'CB'
   tag_UMI = 'UB'
@@ -231,7 +216,7 @@ params {
   souporcell_out = "souporcell_out"
   
   // scSplit
-  scSplit = "True"
+  scSplit = "False"
   scSplit_preprocess = "True"
   scSplit_variant = "freebayes"
   refscSplit = 'ref_filtered.csv'
@@ -342,8 +327,8 @@ params {
   // donor matching
   match_donor = 'True'
   demultiplexing_result = "None"
-  match_donor_method1 = 'multiseq'
-  match_donor_method2 = 'htodemux'
+  match_donor_method1 = 'None'
+  match_donor_method2 = 'None'
   findVariants = 'False'
   variant_count = 10
   variant_pct = 0.9
@@ -351,6 +336,9 @@ params {
 }
 
 conda.enabled = true
+singularity.enabled = true
+singularity.runOptions = "--bind $PWD"
+singularity.cacheDir = "$PWD"
 
 profiles{
     standard {
@@ -358,7 +346,7 @@ profiles{
             executor = 'local'
             withLabel: big_mem {
                 cpus = 4
-                memory = 8.GB
+                memory = 10.GB
             }
             withLabel: small_mem {
                 cpus = 2
@@ -387,24 +375,18 @@ profiles{
 
 process {
     echo = true
-
-    singularity {
-        enabled = true
-        runOptions = "--bind $PWD"
-        cacheDir = "$PWD"
-    }
     
     withName:demuxem{
-        conda = "/opt/homebrew/Caskroom/miniforge/base/envs/demuxem"
+        conda = './conda/demuxem_py.yml'
     }
     withName:hashedDrops{
-        conda = '/opt/homebrew/Caskroom/miniforge/base/envs/dropletutils'
+        conda = './conda/dropletutils.yml'
     }
     withName:hash_solo {
-        conda = '/opt/homebrew/Caskroom/miniforge/base/envs/hashsolo_py'
+        conda = './conda/hashsolo_py.yml'
     }
     withLabel:seurat{
-        conda = '/opt/homebrew/Caskroom/miniforge/base/envs/rseurat'
+        conda = './conda/rseurat.yml'
     }
     withName:summary {
         conda = './conda/summary_py.yml'
@@ -419,7 +401,7 @@ process {
         conda = 'bioconda::popscle'
     }
     withName:vireo {
-        conda = "/opt/homebrew/Caskroom/miniforge/base/envs/vireosnp"
+        conda = "aksarkar::vireosnp"
     }
     withName:freebayes {
         conda = 'bioconda::freebayes=1.2'
@@ -431,7 +413,7 @@ process {
         conda = 'bioconda::cellsnp-lite'
     }
     withName:samstool{
-        conda = '/opt/homebrew/Caskroom/miniforge/base/envs/samtools'
+        conda = './conda/samstool.yml'
     }
     withName:bcftools {
         conda = 'bioconda::bcftools=1.9'
