fix some existing errors 1. samstool -> samtools 2. remove sampleID in single modules

--- a/nextflow.config
+++ b/nextflow.config
@@ -375,7 +375,8 @@ profiles{
 
 process {
     echo = true
-    
+    debug = true
+
     withName:demuxem{
         conda = './conda/demuxem_py.yml'
     }
@@ -413,7 +414,7 @@ process {
         conda = 'bioconda::cellsnp-lite'
     }
     withName:samstool{
-        conda = './conda/samstool.yml'
+        conda = './conda/samtools.yml'
     }
     withName:bcftools {
         conda = 'bioconda::bcftools=1.9'
