code adapted to new mode single data - multi data, needed new dataset for demuxmix

--- a/nextflow.config
+++ b/nextflow.config
@@ -123,6 +123,52 @@ params {
   random_state = 0
   generate_gender_plot = "None" // if object is not available, set as "None"
   objectOutDemuxem = "demuxem_res"
+
+  //gmm-demux
+  gmmDemux = "False"
+  hto_matrix_gmm_demux = "filtered"
+  assignmentOutGmmDemux = "gmm_demux"
+  hto_name_gmm = "None"
+  summary = 2000
+  report_gmm = "report.txt"
+  mode_GMM = "tsv"
+  extract = 'None' 
+  threshold_gmm = 0.8
+  ambiguous = 0.05
+
+  //demuxmix
+  demuxmix = "True"
+  rna_matrix_demuxmix = "raw"
+  hto_matrix_demuxmix = "raw"
+  assignmentOutDemuxmix = "demuxmix"
+  demuxmix_preprocess = "True"
+  rna_available = 'TRUE'
+  model = 'naive'
+  alpha_demuxmix = 0.9
+  beta_demuxmix = 0.9
+  tol_demuxmix = 0.00001
+  maxIter_demuxmix = 1000
+  k_hto = 1.5
+  k_rna = 1.5
+
+  //bff
+  bff = "False"
+  rna_matrix_bff = "raw"
+  hto_matrix_bff = "raw"
+  assignmentOutBff = "bff" 
+  bff_preprocess = "True"
+  methods = "bff_raw,bff_cluster"
+  methodsForConsensus = 'NULL'
+  cellbarcodeWhitelist = 'NULL'
+  metricsFile = 'metrics_bff.csv'
+  doTSNE = "True"
+  doHeatmap = "True"
+  perCellSaturation = 'NULL'
+  majorityConsensusThreshold = 'NULL'
+  chemistry = "10xV3"
+  rawFeatureMatrixH5 = "raw"
+  callerDisagreementThreshold = 'NULL'
+
   
   // genetics-based deconvolution 
   
@@ -387,10 +433,19 @@ process {
         conda = './conda/hashsolo_py.yml'
     }
     withLabel:seurat{
-        conda = './conda/rseurat.yml'
+        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/rseurat'
     }
     withName:summary {
-        conda = './conda/summary_py.yml'
+        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/summary'
+    }
+    withName:gmm_demux {
+        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/gmm_demux'
+    }
+    withName:demuxmix {
+        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/demuxmix'
+    }
+    withName:bff {
+        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/bff'
     }
     withName:matchDonor {
         conda = './conda/donor_match.yml'
