Demuxmix single tested working, added function to create seurat object raw for demuxmix

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,7 @@ params {
   margin = 2
   norm_method = "CLR"
   preprocessOut = "preprocessed"
+  demuxmix_preprocess_mode = "FALSE"
   
   // htodemux
   htodemux = "True"
