changed name of variable for raw data preprocessing

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,7 +22,7 @@ params {
   margin = 2
   norm_method = "CLR"
   preprocessOut = "preprocessed"
-  demuxmix_preprocess_mode = "FALSE"
+  raw_data_object = "FALSE"
   
   // htodemux
   htodemux = "True"
