1. make process name shorter 2. turn all summary process to python 3. fix memory label 4. fix donor matching metric

--- a/nextflow.config
+++ b/nextflow.config
@@ -358,7 +358,8 @@ profiles{
 
     cluster {
         process {
-            executor = 'local'
+            executor = 'slurm'
+            // queue = ...
             withLabel: big_mem {
                 cpus = 32
                 memory = 64.GB
@@ -366,7 +367,6 @@ profiles{
             withLabel: small_mem {
                 cpus = 16
                 memory = 32.GB
-                // queue = ...
             }
         }
     }
@@ -389,7 +389,7 @@ process {
     withLabel:seurat{
         conda = './conda/rseurat.yml'
     }
-    withName:summary {
+    withLabel:summary {
         conda = './conda/summary_py.yml'
     }
     withName:matchDonor {
@@ -413,17 +413,11 @@ process {
     withName:cellSNP {
         conda = 'bioconda::cellsnp-lite'
     }
-    withName:samstool{
+    withName:samtools{
         conda = './conda/samtools.yml'
     }
     withName:bcftools {
         conda = 'bioconda::bcftools=1.9'
-    }
-    withName:summary_all {
-        conda = "./conda/summary_py.yml"
-    }
-    withName:generate_data {
-        conda = "./conda/summary_py.yml"
     }
     withName:souporcell{
         container = "shub://wheaton5/souporcell"
