added pre-processing only hto, deleted paths for conda nextflow config

--- a/nextflow.config
+++ b/nextflow.config
@@ -434,19 +434,19 @@ process {
         conda = './conda/hashsolo_py.yml'
     }
     withLabel:seurat{
-        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/rseurat'
+        conda = './conda/rseurat.yml'
     }
     withName:summary {
-        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/summary'
+        conda = './conda/summary_py.yml'
     }
     withName:gmm_demux {
-        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/gmm_demux'
+        conda = './conda/gmm_demux.yml'
     }
     withName:demuxmix {
-        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/demuxmix'
+        conda = './conda/demuxmix.yml'
     }
     withName:bff {
-        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/bff'
+        conda = './conda/bff.yml'
     }
     withName:matchDonor {
         conda = './conda/donor_match.yml'
