added support for rna, no rna runs demuxmix and gmm

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,6 +28,8 @@ params {
   htodemux = "True"
   rna_matrix_htodemux = "filtered"
   hto_matrix_htodemux = "filtered"
+  rna_available_filtered = "TRUE"
+  raw_object_htodemux = "FALSE"
   quantile_htodemux = "0.99"
   kfunc = "clara"
   nstarts = 100
@@ -61,6 +63,7 @@ params {
   multiseq = "True"
   rna_matrix_multiseq = "filtered"
   hto_matrix_multiseq = "filtered"
+  raw_object_multiseq = "FALSE"
   quantile_multi = "0.7"
   autoThresh = "TRUE" // uppercase
   maxiter = 5
@@ -126,7 +129,7 @@ params {
   objectOutDemuxem = "demuxem_res"
 
   //gmm-demux
-  gmmDemux = "False"
+  gmmDemux = "True"
   hto_matrix_gmm_demux = "filtered"
   assignmentOutGmmDemux = "gmm_demux"
   hto_name_gmm = "None"
@@ -141,8 +144,10 @@ params {
   demuxmix = "True"
   rna_matrix_demuxmix = "raw"
   hto_matrix_demuxmix = "raw"
+  rna_available_demuxmix = "FALSE"
   assignmentOutDemuxmix = "demuxmix"
   demuxmix_preprocess = "True"
+  correctTails = "TRUE"
   rna_available = 'TRUE'
   model = 'naive'
   alpha_demuxmix = 0.9
@@ -434,16 +439,16 @@ process {
         conda = './conda/hashsolo_py.yml'
     }
     withLabel:seurat{
-        conda = './conda/rseurat.yml'
+        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/rseurat'
     }
     withName:summary {
-        conda = './conda/summary_py.yml'
+        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/summary'
     }
     withName:gmm_demux {
-        conda = './conda/gmm_demux.yml'
+        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/gmm_demux'
     }
     withName:demuxmix {
-        conda = './conda/demuxmix.yml'
+        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/demuxmix'
     }
     withName:bff {
         conda = './conda/bff.yml'
