deleted paths from nextflow config to conda envs local

--- a/nextflow.config
+++ b/nextflow.config
@@ -438,19 +438,19 @@ process {
         conda = './conda/hashsolo_py.yml'
     }
     withLabel:seurat{
-        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/rseurat'
+        conda = './conda/rseurat'
     }
     withName:summary {
-        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/summary'
+        conda = 'summary_py.yml'
     }
     withName:gmm_demux {
-        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/gmm_demux'
+        conda = './conda/gmm_demux.yml'
     }
     withName:demuxmix {
-        conda = '/Users/mylenemarianagonzalesandre/miniconda3/envs/demuxmix'
+        conda = './conda/demuxmix.yml'
     }
     withName:bff {
-        conda = './conda/bff.yml'
+        conda = './conda/bff.yml.yml'
     }
     withName:matchDonor {
         conda = './conda/donor_match.yml'
