--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,13 @@
 work/
 data/
 results/
+result/
 .DS_Store
 testing/
 testing*
 *.pyc
-
+TestData4PipelineSmall/
 docs/build/
+test_data/
+result_test
+result_test_adata
