--- a/nextflow.config
+++ b/nextflow.config
@@ -186,7 +186,7 @@ params {
   // vireo
   vireo = "True"
   vireo_preprocess = "False"
-  vireo_variant = "cellsnp"
+  vireo_variant = "True"
   genoTag = 'GT'
   noDoublet = 'False'
   nInit = 50
@@ -218,7 +218,7 @@ params {
   // scSplit
   scSplit = "False"
   scSplit_preprocess = "True"
-  scSplit_variant = "freebayes"
+  scSplit_variant = "True"
   refscSplit = 'ref_filtered.csv'
   altscSplit = 'alt_filtered.csv'
   subscSplit = 10
