--- a/conda/gmm_demux.yml
+++ b/conda/gmm_demux.yml
@@ -6,9 +6,8 @@ dependencies:
   - python=3.9
   - numpy
   - pandas
-  - r-argparse
-  - r-data.table
   - pip
   - pip:
       - GMM_Demux==0.2.1.3
       - scikit-learn==1.1.3
+      - argparse
