--- a/nextflow.config
+++ b/nextflow.config
@@ -27,8 +27,6 @@ params {
   htodemux = "True"
   rna_matrix_htodemux = "filtered"
   hto_matrix_htodemux = "filtered"
-  rna_available_filtered = "TRUE"
-  raw_object_htodemux = "FALSE"
   quantile_htodemux = "0.99"
   kfunc = "clara"
   nstarts = 100
@@ -62,7 +60,6 @@ params {
   multiseq = "True"
   rna_matrix_multiseq = "filtered"
   hto_matrix_multiseq = "filtered"
-  raw_object_multiseq = "FALSE"
   quantile_multi = "0.7"
   autoThresh = "TRUE" // uppercase
   maxiter = 5
@@ -143,7 +140,6 @@ params {
   demuxmix = "True"
   rna_matrix_demuxmix = "raw"
   hto_matrix_demuxmix = "raw"
-  rna_available_demuxmix = "FALSE"
   assignmentOutDemuxmix = "demuxmix"
   demuxmix_preprocess = "True"
   correctTails = "TRUE"
@@ -438,13 +434,13 @@ process {
         conda = './conda/hashsolo_py.yml'
     }
     withLabel:seurat{
-        conda = './conda/rseurat'
+        conda = './conda/rseurat.yml'
     }
     withName:summary {
-        conda = 'summary_py.yml'
+        conda = './conda/summary_py.yml'
     }
     withName:gmm_demux {
-        conda = './conda/gmm_demux.yml'
+        conda = ./conda/gmm_demux.yml'
     }
     withName:demuxmix {
         conda = './conda/demuxmix.yml'
