demuxmix on conda env, other changes

--- a/conda/demuxmix.yml
+++ b/conda/demuxmix.yml
@@ -4,6 +4,7 @@ channels:
   - bioconda
 dependencies:
   - conda-forge::r-base>=4.2
+  - bioconductor-demuxmix
   - r-seurat
   - r-argparse
   - r-data.table
