--- a/nextflow.config
+++ b/nextflow.config
@@ -437,10 +437,10 @@ process {
         conda = './conda/rseurat.yml'
     }
     withLabel:summary {
-        conda = './conda/summary_py.yml'
+        conda = './conda/summary.yml'
     }
     withName:gmm_demux {
-        conda = ./conda/gmm_demux.yml'
+        conda = './conda/gmm_demux.yml'
     }
     withName:demuxmix {
         conda = './conda/demuxmix.yml'
