changes for BFF, cellHashR restricted only to bff

--- a/nextflow.config
+++ b/nextflow.config
@@ -158,7 +158,7 @@ params {
   hto_matrix_bff = "raw"
   assignmentOutBff = "bff" 
   bff_preprocess = "True"
-  methods = "bff_raw,bff_cluster"
+  methods = "combined_bff"
   methodsForConsensus = 'NULL'
   cellbarcodeWhitelist = 'NULL'
   metricsFile = 'metrics_bff.csv'
@@ -167,7 +167,6 @@ params {
   perCellSaturation = 'NULL'
   majorityConsensusThreshold = 'NULL'
   chemistry = "10xV3"
-  rawFeatureMatrixH5 = "raw"
   callerDisagreementThreshold = 'NULL'
 
   
