parameter deleted bff single

--- a/nextflow.config
+++ b/nextflow.config
@@ -125,7 +125,7 @@ params {
   objectOutDemuxem = "demuxem_res"
 
   //gmm-demux
-  gmmDemux = "True"
+  gmmDemux = "False"
   hto_matrix_gmm_demux = "filtered"
   assignmentOutGmmDemux = "gmm_demux"
   hto_name_gmm = "None"
@@ -436,7 +436,7 @@ process {
         conda = './conda/rseurat.yml'
     }
     withLabel:summary {
-        conda = './conda/summary.yml'
+        conda = './conda/summary_py.yml'
     }
     withName:gmm_demux {
         conda = './conda/gmm_demux.yml'
