preprocess cellhashR optional added

--- a/nextflow.config
+++ b/nextflow.config
@@ -168,6 +168,8 @@ params {
   majorityConsensusThreshold = 'NULL'
   chemistry = "10xV3"
   callerDisagreementThreshold = 'NULL'
+  preprocess_bff = "FALSE"
+  barcodeWhitelist = 'NULL'
 
   
   // genetics-based deconvolution 
