gene_col added to pre-processing format diff for bff data

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,7 @@ params {
   margin = 2
   norm_method = "CLR"
   preprocessOut = "preprocessed"
+  gene_col = 2
   
   // htodemux
   htodemux = "True"
