trycatch for demuxmix, option for filter rna demuxem

--- a/nextflow.config
+++ b/nextflow.config
@@ -124,6 +124,7 @@ params {
   random_state = 0
   generate_gender_plot = "None" // if object is not available, set as "None"
   objectOutDemuxem = "demuxem_res"
+  filter_demuxem = "true"
 
   //gmm-demux
   gmmDemux = "True"
