fix conda env bug

--- a/nextflow.config
+++ b/nextflow.config
@@ -434,10 +434,10 @@ process {
         conda = './conda/dropletutils.yml'
     }
     withName:hash_solo {
-        conda = './conda/hash_solo.yml'
+        conda = './conda/hashsolo_py.yml'
     }
     withLabel:seurat{
-        conda = './conda/seurat.yml'
+        conda = './conda/rseurat.yml'
     }
     withLabel:summary {
         conda = './conda/summary_py.yml'
