fix conda env not found error
fix conda env not found error when running pipeline remotely

--- a/nextflow.config
+++ b/nextflow.config
@@ -428,31 +428,31 @@ process {
     debug = true
 
     withName:demuxem{
-        conda = './conda/demuxem_py.yml'
+        conda = "$projectDir/conda/demuxem_py.yml"
     }
     withName:hashedDrops{
-        conda = './conda/dropletutils.yml'
+        conda = "$projectDir/conda/dropletutils.yml"
     }
     withName:hash_solo {
-        conda = './conda/hashsolo_py.yml'
+        conda = "$projectDir/conda/hashsolo_py.yml"
     }
     withLabel:seurat{
-        conda = './conda/rseurat.yml'
+        conda = "$projectDir/conda/rseurat.yml"
     }
     withLabel:summary {
-        conda = './conda/summary_py.yml'
+        conda = "$projectDir/conda/summary_py.yml"
     }
     withName:gmm_demux {
-        conda = './conda/gmm_demux.yml'
+        conda = "$projectDir/conda/gmm_demux.yml"
     }
     withName:demuxmix {
-        conda = './conda/demuxmix.yml'
+        conda = "$projectDir/conda/demuxmix.yml"
     }
     withName:bff {
-        conda = './conda/dropletutils.yml'
+        conda = "$projectDir/conda/dropletutils.yml"
     }
     withName:matchDonor {
-        conda = './conda/donor_match.yml'
+        conda = "$projectDir/conda/donor_match.yml"
     }
     withName:demuxlet{
         conda = 'bioconda::popscle'
@@ -467,13 +467,13 @@ process {
         conda = 'bioconda::freebayes=1.2'
     }
     withName:scSplit {
-        conda = './conda/scsplit.yml'
+        conda = "$projectDir/conda/scsplit.yml"
     }
     withName:cellSNP {
         conda = 'bioconda::cellsnp-lite'
     }
     withName:samtools{
-        conda = './conda/samtools.yml'
+        conda = "$projectDir/conda/samtools.yml"
     }
     withName:bcftools {
         conda = 'bioconda::bcftools=1.9'
