Implementation mudata, anndata and some commented lines and extra print commands deleted

--- a/nextflow.config
+++ b/nextflow.config
@@ -403,19 +403,21 @@ profiles{
     }
 
     cluster {
-         process {
-             executor = 'local'
-             withLabel: big_mem {
-                 cpus = 32
-                 memory = 64.GB
-             }
-             withLabel: small_mem {
-                 cpus = 16
-                 memory = 32.GB
-                 // queue = ...
-             }
-         }
-     }
+        process {
+            executor = 'slurm'
+            maxRetries = 3 
+            // queue = ...
+            // clusterOptions =  ...
+	        withLabel: big_mem {
+                cpus = 32
+                memory = 64.GB
+            }
+            withLabel: small_mem {
+                cpus = 16
+                memory = 32.GB
+            }
+        }
+    }
 }
 
 
@@ -434,8 +436,7 @@ process {
         conda = "$projectDir/conda/hashsolo_py.yml"
     }
     withLabel:seurat{
-
-        conda = "$projectDir/conda/rseurat.yml"
+        conda = './conda/seurat.yml'
     }
     withLabel:summary {
         conda = "$projectDir/conda/summary_py.yml"
@@ -447,7 +448,7 @@ process {
         conda = "$projectDir/conda/demuxmix.yml"
     }
     withName:bff {
-
+        
         conda = "$projectDir/conda/dropletutils.yml"
     }
     withName:matchDonor {
