Implementation mudata, anndata and some commented lines and extra print commands deleted

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@ params {
   outdir = "result_test"
   mode = "rescue"
   generate_anndata = "True"
-  generate_mudata = "False"
+  generate_mudata = "True"
   multi_input = "None"  // run only one sample
 
   // hashing-based deconvolution
@@ -437,7 +437,7 @@ process {
         conda = './conda/hash_solo.yml'
     }
     withLabel:seurat{
-        conda = './conda/seurat.yml'
+        conda = './conda/rseurat.yml'
     }
     withLabel:summary {
         conda = './conda/summary_py.yml'
