--- a/nextflow.config
+++ b/nextflow.config
@@ -404,22 +404,19 @@ profiles{
     }
 
     cluster {
-        process {
-            executor = 'slurm'
-            // queue = ...
-           maxRetries = 3 
-           queue = 'cpu_p'
-          clusterOptions = '--qos=icb --nice=10000'
-	   withLabel: big_mem {
-                cpus = 32
-                memory = 64.GB
-            }
-            withLabel: small_mem {
-                cpus = 16
-                memory = 32.GB
-            }
-        }
-    }
+         process {
+             executor = 'local'
+             withLabel: big_mem {
+                 cpus = 32
+                 memory = 64.GB
+             }
+             withLabel: small_mem {
+                 cpus = 16
+                 memory = 32.GB
+                 // queue = ...
+             }
+         }
+     }
 }
 
 
@@ -449,7 +446,7 @@ process {
         conda = './conda/demuxmix.yml'
     }
     withName:bff {
-        conda = './conda/dropletutils.yml'
+        conda = './conda/bff.yml'
     }
     withName:matchDonor {
         conda = './conda/donor_match.yml'
