add to bff conda env and cleaning nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -403,7 +403,7 @@ profiles{
     }
 
     cluster {
-        process {
+         process {
             executor = 'slurm'
             maxRetries = 3 
             // queue = ...
@@ -417,7 +417,7 @@ profiles{
                 memory = 32.GB
             }
         }
-    }
+     }
 }
 
 
@@ -448,8 +448,7 @@ process {
         conda = "$projectDir/conda/demuxmix.yml"
     }
     withName:bff {
-        
-        conda = "$projectDir/conda/dropletutils.yml"
+        conda = './conda/bff.yml'
     }
     withName:matchDonor {
         conda = "$projectDir/conda/donor_match.yml"
