--- a/nextflow.config
+++ b/nextflow.config
@@ -431,7 +431,7 @@ process {
         conda = './conda/dropletutils.yml'
     }
     withName:hash_solo {
-        conda = './conda/hash_solo.yml'
+        conda = './conda/hashsolo_py.yml'
     }
     withLabel:seurat{
         conda = './conda/rseurat.yml'
