add test profile to souporcell

--- a/nextflow.config
+++ b/nextflow.config
@@ -171,7 +171,6 @@ params {
   barcodeWhitelist = 'NULL'
   
   // genetics-based deconvolution 
-  
   // key input
   bam = "None"
   bai = "None"
@@ -256,6 +255,7 @@ params {
   min_ref = 10
   max_loci = 2048
   restarts = "None"
+  use_known_genotype = "True"
   known_genotypes_sample_names = "None"
   skip_remap = "True"
   ignore = "False"
