1.add line break 2.remove container setting 3. adapt souporcell testing

--- a/test.config
+++ b/test.config
@@ -1,12 +1,10 @@
 params {
-  outdir = "result_test_new"
+  outdir = "result_test"
   // input for hashing-based deconvolution
   hto_matrix_raw = "$projectDir/test_data/hto"
   hto_matrix_filtered = "$projectDir/test_data/hto"
   rna_matrix_raw = "$projectDir/test_data/rna"
   rna_matrix_filtered = "$projectDir/test_data/rna"
-
-  souporcell = "False"
 
   // input for genotype-based deconvolution
   bam = "$projectDir/test_data/jurkat_293t_downsampled_n500_full_bam.bam"
@@ -20,11 +18,10 @@ params {
   common_variants_freemuxlet = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
   common_variants_cellsnp  = "$projectDir/test_data/genome1K.phase3.SNP_AF5e2.chr1toX.hg19.vcf.gz"
   vcf_donor = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf"
-
   // Call freebayes on chr 1 and chr 2 only to speed up run time
   region = "1;2"
-
   // donor genotype file provided by popscle doesnt work on souporcell
   use_known_genotype = "False"
+  ignore = "True"
 
 }
