enable conda and singularity for test config

--- a/nextflow.config
+++ b/nextflow.config
@@ -446,7 +446,11 @@ profiles {
         apptainer.enabled      = false
     }
     test { 
-        includeConfig 'test.config'       
+        includeConfig 'test.config'
+        singularity.enabled    = true
+        singularity.runOptions = "--bind $PWD"
+        singularity.cacheDir = "$PWD"
+        conda.enabled          = true       
     }
 }
 
