correction merged files

--- a/nextflow.config
+++ b/nextflow.config
@@ -448,7 +448,7 @@ process {
         conda = "$projectDir/conda/demuxmix.yml"
     }
     withName:bff {
-        conda = './conda/bff.yml'
+        conda = "$projectDir/conda/dropletutils.yml"
     }
     withName:matchDonor {
         conda = "$projectDir/conda/donor_match.yml"
