upgrade pandas and python version, simplify summary code, add github workflow action

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ params {
   outdir = "result"
   mode = "rescue"
   generate_anndata = "True"
-  generate_mudata = "False"
+  generate_mudata = "True"
   multi_input = null  // run only one sample
 
   // hashing-based deconvolution
@@ -247,7 +247,7 @@ params {
   vireo_out = "vireo_out"
  
   // souporcell
-  souporcell = "False"
+  souporcell = "True"
   souporcell_preprocess = "False"
   threads = 5
   ploidy = 2
@@ -437,7 +437,7 @@ profiles {
     singularity {
         singularity.enabled    = true
         singularity.runOptions = "--bind $PWD"
-        singularity.cacheDir = "$PWD"
+        singularity.cacheDir   = "$PWD"
         conda.enabled          = false
         docker.enabled         = false
         podman.enabled         = false
@@ -447,10 +447,17 @@ profiles {
     }
     test { 
         includeConfig 'test.config'
+    }
+    conda_singularity { 
         singularity.enabled    = true
         singularity.runOptions = "--bind $PWD"
-        singularity.cacheDir = "$PWD"
-        conda.enabled          = true       
+        singularity.cacheDir   = "$PWD"
+        conda.enabled          = true
+        docker.enabled         = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false   
     }
 }
 
