--- a/test.config
+++ b/test.config
@@ -10,8 +10,8 @@ params {
   bam = "$projectDir/test_data/jurkat_293t_downsampled_n500_full_bam.bam"
   bai = "$projectDir/test_data/jurkat_293t_downsampled_n500_full_bam.bam.bai"
   barcodes = "$projectDir/test_data/barcodes.tsv"
-  fasta = "$projectDir/test_data/refdata-cellranger-hg19-3.0.0/fasta/genome.fa"
-  fasta_index = "$projectDir/test_data/refdata-cellranger-hg19-3.0.0/fasta/genome.fa.fai"
+  fasta = "$projectDir/test_data/refdata-cellranger-hg19-3.0.0/fasta/genome_chr1.fa"
+  fasta_index = "$projectDir/test_data/refdata-cellranger-hg19-3.0.0/fasta/genome_chr1.fa.fai"
   nsample = 2
   common_variants_scSplit = "$projectDir/test_data/common_variants_hg19_list.vcf"
   common_variants_souporcell =  "$projectDir/test_data/common_variants_hg19.vcf"
@@ -19,7 +19,7 @@ params {
   common_variants_cellsnp  = "$projectDir/test_data/genome1K.phase3.SNP_AF5e2.chr1toX.hg19.vcf.gz"
   vcf_donor = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf"
   // Call freebayes on chr 1 and chr 2 only to speed up run time
-  region = "1;2"
+  region = "1"
   // donor genotype file provided by popscle doesnt work on souporcell
   use_known_genotype = "False"
   ignore = "True"
