--- a/test.config
+++ b/test.config
@@ -10,8 +10,8 @@ params {
   bam = "$projectDir/test_data/jurkat_293t_downsampled_n500_full_bam.bam"
   bai = "$projectDir/test_data/jurkat_293t_downsampled_n500_full_bam.bam.bai"
   barcodes = "$projectDir/test_data/barcodes.tsv"
-  fasta = "$projectDir/test_data/refdata-cellranger-hg19-3.0.0/fasta/genome_chr1.fa"
-  fasta_index = "$projectDir/test_data/refdata-cellranger-hg19-3.0.0/fasta/genome_chr1.fa.fai"
+  fasta = "$projectDir/test_data/genome_chr1.fa"
+  fasta_index = "$projectDir/test_data/genome_chr1.fa.fai"
   nsample = 2
   common_variants_scSplit = "$projectDir/test_data/common_variants_hg19_list.vcf"
   common_variants_souporcell =  "$projectDir/test_data/common_variants_hg19.vcf"
