--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -11,7 +11,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
-          auto-update-conda: true
+          miniconda-version: "latest"
           conda-channels: bioconda, conda-forge
       - name: Install Nextflow
         uses: nf-core/setup-nextflow@v1
