--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           auto-update-conda: true
           miniconda-version: "latest"
-          conda-channels: bioconda, conda-forge
+          channels: conda-forge, bioconda
       - name: Install Nextflow
         uses: nf-core/setup-nextflow@v1
       - name: Install singularity to run Souporcell
