--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -15,12 +15,8 @@ jobs:
           channels: conda-forge, bioconda
       - name: Install Nextflow
         uses: nf-core/setup-nextflow@v1
-      - name: Install singularity to run Souporcell
-        uses: eWaterCycle/setup-singularity@v7
-        with:
-          singularity-version: 3.8.3
       - name: Download test dataset
         run: bash ${GITHUB_WORKSPACE}/test_data/download_data.sh
       - name: Run pipeline with test data
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -profile test,conda_singularity
+          nextflow run ${GITHUB_WORKSPACE} -profile test,conda --souporcell False
