disable new hashing methods + add mudata

--- a/nextflow.config
+++ b/nextflow.config
@@ -124,7 +124,7 @@ params {
   filter_demuxem = "True"
 
   // gmm-demux
-  gmmDemux = "True"
+  gmmDemux = "False"
   hto_matrix_gmm_demux = "filtered"
   assignmentOutGmmDemux = "gmm_demux"
   hto_name_gmm = "None"
@@ -136,7 +136,7 @@ params {
   ambiguous = 0.05
 
   // demuxmix
-  demuxmix = "True"
+  demuxmix = "False"
   rna_matrix_demuxmix = "raw"
   hto_matrix_demuxmix = "raw"
   assignmentOutDemuxmix = "demuxmix"
@@ -152,7 +152,7 @@ params {
   k_rna = 1.5
 
   // bff
-  bff = "True"
+  bff = "False"
   rna_matrix_bff = "raw"
   hto_matrix_bff = "raw"
   assignmentOutBff = "bff" 
