--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -19,4 +19,4 @@ jobs:
         run: bash ${GITHUB_WORKSPACE}/test_data/download_data.sh
       - name: Run pipeline with test data
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -profile test,conda --souporcell False
+          nextflow run ${GITHUB_WORKSPACE} -profile test,conda --souporcell False --generate_anndata False
