disable mudata for memory

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ params {
   outdir = "result"
   mode = "rescue"
   generate_anndata = "True"
-  generate_mudata = "True"
+  generate_mudata = "False"
   multi_input = null  // run only one sample
 
   // hashing-based deconvolution
