fixes hashed drops

--- a/nextflow.config
+++ b/nextflow.config
@@ -107,6 +107,7 @@ params {
   combinations = "None"
   objectOutHashedDrops = "hashedDrops"
   assignmentOutHashedDrops = "hashedDrops"
+  runEmptyDrops = "True"
   
   // demuxem
   demuxem = "True"
