resolved comments PR, multi_sample_input file in test_data

--- a/nextflow.config
+++ b/nextflow.config
@@ -126,7 +126,7 @@ params {
   filter_demuxem = "True"
 
   // gmm-demux
-  gmmDemux = "False"
+  gmmDemux = "True"
   hto_matrix_gmm_demux = "filtered"
   assignmentOutGmmDemux = "gmm_demux"
   hto_name_gmm = "None"
@@ -138,7 +138,7 @@ params {
   ambiguous = 0.05
 
   // bff
-  bff = "False"
+  bff = "True"
   rna_matrix_bff = "raw"
   hto_matrix_bff = "raw"
   assignmentOutBff = "bff" 
