added params for gmm_demux test config

--- a/test.config
+++ b/test.config
@@ -23,4 +23,7 @@ params {
   // donor genotype file provided by popscle doesnt work on souporcell
   use_known_genotype = "False"
   ignore = "True"
+  //gmm_demux input
+  hto_name_gmm = "hto_1,hto_2"
+
 }
