rename parameter nsamples, improve formatting, add paper title in doc

--- a/nextflow.config
+++ b/nextflow.config
@@ -29,7 +29,7 @@ params {
   quantile_htodemux = "0.99"
   kfunc = "clara"
   nstarts = 100
-  nsamples = 100
+  nsamples_clustering = 100
   seed = 42
   init = "None"
   objectOutHTO = "htodemux"
@@ -177,7 +177,7 @@ params {
   barcodes = "None"
   fasta = "None"
   fasta_index = "None"
-  nsample = 2
+  nsamples_genetic = 2
   common_variants_scSplit = "None"
   common_variants_souporcell = "None"
   common_variants_freemuxlet = "None"
@@ -255,7 +255,7 @@ params {
   min_ref = 10
   max_loci = 2048
   restarts = "None"
-  use_known_genotype = "True"
+  use_known_genotype = "False"
   known_genotypes_sample_names = "None"
   skip_remap = "True"
   ignore = "False"
