add example case and enable running pipelien outside project dir

--- a/nextflow.config
+++ b/nextflow.config
@@ -212,7 +212,7 @@ params {
   r2_info = "R2"
   min_mac = 1
   min_callrate = 0.50
-  alpha = "0.5" // must be string, multiple values in a single run should be comma separated
+  alpha = 0.5 
   doublet_prior = 0.5
   demuxlet_out = "demuxlet_res"
 
@@ -290,7 +290,7 @@ params {
   report_all_haplotype_alleles = "False"
   report_monomorphic  = "False"
   pvar = 0.0
-  strict_vcf  = "False"
+  strict_vcf = "False"
   
   theta = 0.001
   pooled_discrete = "False"
