--- a/test.config
+++ b/test.config
@@ -12,7 +12,7 @@ params {
   barcodes = "$projectDir/test_data/barcodes.tsv"
   fasta = "$projectDir/test_data/genome_chr1.fa"
   fasta_index = "$projectDir/test_data/genome_chr1.fa.fai"
-  nsample = 2
+  nsamples_genetic = 2
   common_variants_scSplit = "$projectDir/test_data/common_variants_hg19_list.vcf"
   common_variants_souporcell =  "$projectDir/test_data/common_variants_hg19.vcf"
   common_variants_freemuxlet = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
