fix bug of alpha parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -212,7 +212,7 @@ params {
   r2_info = "R2"
   min_mac = 1
   min_callrate = 0.50
-  alpha = 0.5 
+  alpha = "0.5" // must be quoted
   doublet_prior = 0.5
   demuxlet_out = "demuxlet_res"
 
