cleaning up and speeding up pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,11 @@
 
 params {
+
+  // Nf core integration 
+    custom_config_version      = 'master'
+    custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+
+
   outdir = "result"
   mode = "rescue"
   generate_anndata = "True"
@@ -372,11 +378,11 @@ profiles {
             executor = 'local'
             withLabel: big_mem {
                 cpus = 4
-                memory = 10.GB
+                memory = 150.GB
             }
             withLabel: small_mem {
                 cpus = 2
-                memory = 8.GB
+                memory = 100.GB
             }
         }
         
@@ -389,11 +395,13 @@ profiles {
             // clusterOptions =  ...
 	        withLabel: big_mem {
                 cpus = 32
-                memory = 64.GB
+                memory = 150.GB
+                time =24.h
             }
             withLabel: small_mem {
                 cpus = 16
-                memory = 32.GB
+                memory = 100.GB
+                time =24.h
             }
         }
     }
@@ -450,4 +458,11 @@ profiles {
 process {
     echo = true
     debug = true
+}
+
+
+try {
+    includeConfig "${params.custom_config_base}/nfcore_custom.config"
+} catch (Exception e) {
+    System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
