--- a/nextflow.config
+++ b/nextflow.config
@@ -6,7 +6,7 @@ params {
     custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
 
 
-  outdir = "result"
+  outdir = "${launchDir}/results"
   mode = "rescue"
   generate_anndata = "True"
   generate_mudata = "False"
@@ -404,6 +404,15 @@ profiles {
                 memory = 100.GB
                 time =24.h
             }
+
+            withName: summary{
+                cpus = 6
+                memory = 20.GB
+            }
+
+            withName:souporcell{
+                time = 48.h
+            }
         }
     }
     conda {
@@ -459,6 +468,9 @@ profiles {
 process {
     echo = true
     debug = true
+    maxRetries    = 3
+    maxErrors     = '-1'
+    errorStrategy = 'retry'
 }
 
 
