fixing chanel conflicts

--- a/nextflow.config
+++ b/nextflow.config
@@ -406,8 +406,13 @@ profiles {
             }
 
             withName: summary{
-                cpus = 6
-                memory = 20.GB
+                cpus = 1
+                memory = {10.GB * task.attempt}
+            }
+
+            withName: matchDonor{
+                cpus = {2 * task.attempt}
+                memory = {10.GB * task.attempt }
             }
 
             withName:souporcell{
